src/tests/Loader/classloader/generics/Instantiation/Negative/param06.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <CLRTestPriority>1</CLRTestPriority>
  </PropertyGroup>
  <ItemGroup>
    <Compile Include="param06.il" />
  </ItemGroup>
</Project>
